# test-gstreamer-rust

./: Cargo.toml
src/: main.rs
