[package]
name = "test-gstreamer-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
glib = "0.16.7"
gstreamer = "0.19.7"
gstreamer-app = "0.19.6"
gstreamer-base = "0.19.3"
gstreamer-pbutils = "0.19.2"
gstreamer-video = "0.19.5"
